refactor: 패키지 분리, 매직넘버 상수화